refatora modelos e serviços para simplificar gestão de ingredientes e unidades, adiciona validações, suporte a MongoDB embedded para testes e melhorias na ordenação e arredondamento de itens na lista de compras